Fix NPE building a playoff bracket's first round
List.of(a, b) throws NullPointerException if either argument is null
-- buildPlayoffs used it on homeSource/awaySource while computing each
match's round depth, so any first-round match (which by definition
has both sources null, since it picks teams directly) crashed the
whole request with a 500. Switched to Arrays.asList, which allows
nulls. Every bracket has at least one first-round match, so this
broke the feature for essentially any real submission.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>